--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ body {
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
-    --gutter: 30px;
+    /* --gutter: 30px; */
     --footer-height: 25px;
     
     font-family: 'Titillium Web', sans-serif;
@@ -128,4 +128,72 @@ footer {
 
 .auth-container button {
     margin: 10px;
+}
+
+.leaderboard{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* height: 100%; */
+}
+
+.leaderboard-left{
+    border: 1px solid black;
+    height: 100%;
+    display: grid;
+    align-content: center;
+}
+
+.leaderboard-right{
+    border: 1px solid black;
+    /* height: 100%; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+select{
+    width: 25%;
+}
+
+.trophy{
+    display: grid;
+}
+
+h1{
+    margin: 0;
+    padding: 0;
+}
+
+.score-container{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+}
+
+.table{
+    display: flex;
+    width: 100%;
+    flex-direction: row; 
+    align-items: center;
+justify-content: center;
+}
+
+.score{
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: center;
+
+}
+
+.score h3{
+    margin-right: 15px;
+}
+
+.table h3{
+    margin-right: 15px;
+}
+
+.score P {
+    margin: 0;
 }
