--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+
+
+@font-face {
+    font-family: marioFont;
+    src: url('../assets/PixelEmulator-xq08.ttf');
+}
+
 body {
     --color1: #d17300;
     --color2: #01c6bc;
@@ -47,6 +54,23 @@ header {
     height: var(--header-height);
     box-shadow: var(--shadow);
 }
+
+button {
+    border: 2px solid var(--color5);
+    border-radius: 5px;
+    background-color: white;
+    color: var(--color5);
+    height: 5vh;
+}
+
+button:hover {
+    border: 2px solid white;
+    border-radius: 5px;
+    background-color: var(--color5);
+    color: white;
+    border: none;
+}
+
 
 h2 {
     font-size: 1.8rem;
@@ -170,12 +194,36 @@ h1{
     flex-direction: column;
 }
 
-.table{
-    display: flex;
+/* table css across all pages */
+
+table {
+    margin: 10px 70px 70px;
+    box-shadow: 0px 5px 5px grey;
+    border-radius: 5px;
+    font-size: 12px;
+    font-weight: normal;
+    border: none;
+    border-collapse: collapse;
     width: 100%;
-    flex-direction: row; 
-    align-items: center;
-justify-content: center;
+    max-width: 100%;
+    white-space: nowrap;
+    background-color: white;
+    max-width: 60vw;
+}
+
+td, th {
+    text-align: center;
+    padding: 8px;
+}
+
+th {
+    color: #ffffff;
+    background-color: #6A0400;
+    text-transform: uppercase;
+}
+
+tr:nth-child(even) {
+    background-color: #F8F8F8;
 }
 
 .score{
@@ -196,4 +244,47 @@ justify-content: center;
 
 .score P {
     margin: 0;
+}
+
+
+.flex-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.space-between {
+    justify-content: space-between;
+    align-content: space-between;
+}
+
+
+/* profile setup */
+
+.labelName {
+    width: 10vw;
+}
+
+.editBio {
+    height: 40px;
+    width: 90%;
+}
+
+#avatar {
+    height: 80px;
+    width: 80px;
+    padding: 10px;
+    border: 1px solid grey;
+    border-radius: 90px;
+    margin-right: 20px;
+}
+
+.hidden {
+    display: none;
 }
