--- a/styles/style.css
+++ b/styles/style.css
@@ -8,20 +8,19 @@
 
 body {
     --color1: #d17300;
-    --color2: #01c6bc;
+    --color2: #10c3f4;
     --color3: #efda70;
     --color4: #c10114;
-    --color5: #561313;
+    --color5: #55310a;
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
-    /* --gutter: 30px; */
     --footer-height: 25px;
     
     font-family: 'orbitron', sans-serif;
-    background: linear-gradient(var(--color2), var(--color5));
-    /* background: linear-gradient(70deg, #4292a7 40%, rgba(0, 0, 0, 0) 80%), url(/assets/sign-up-page.png); */
+    background: linear-gradient(var(--color2) 70%, green 90%);
 }
+
 
 main {
     display: flex;
