change mario to not die when jumping on mushroom

--- a/styles/style.css
+++ b/styles/style.css
@@ -218,7 +218,7 @@ td, th {
 
 th {
     color: #ffffff;
-    background-color: #6A0400;
+    background-color: var(--color5);
     text-transform: uppercase;
 }
 
