--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,21 @@ header {
     cursor:pointer;
 }
 
+.gutter-right {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    margin-right: 20px;
+    width: 100%;
+}
+
+.gutter-right img {
+    height: var(--header-height);
+    border-radius: 50%;
+    height: 65px;
+}
+
+
 button {
     border: 2px solid var(--color5);
     border-radius: 5px;
