--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,6 @@ header {
     height: 65px;
 }
 
-
 button {
     border: 2px solid var(--color5);
     border-radius: 5px;
@@ -145,7 +144,7 @@ h2 {
 p {
     margin: var(--gutter);
 }
-  
+
 footer {
     position: fixed;
     width: 100%;
@@ -157,18 +156,11 @@ footer {
     box-shadow: var(--shadow);
 }
 
-
 @keyframes pulse {
     50% {
         transform: scale(1.2);
     }
 }
-
-/* #logout {
-    position: fixed;
-    right: 20px;
-    top: 90px;
-} */
 
 .auth-main {
     display: flex;
@@ -304,7 +296,7 @@ justify-content: center;
 }
 
 
-/* profile setup */
+/* profile page */
 
 .labelName {
     width: 10vw;
@@ -384,4 +376,55 @@ justify-content: center;
     color: white;
     background-color: rgb(43, 43, 43);
     opacity: .7;
+}
+
+/* profile setup page styling */
+
+#profile-setup-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+}
+#profile-setup-form input[type=radio] {
+    visibility: collapse;
+}
+#profile-setup-form .avatar-imgs {
+    height: 150px;
+    width: 150px;
+    cursor: pointer;
+}
+#profile-setup-form input[type=radio]:checked + figure {
+    outline: 3px ridge var(--color3);
+}
+#profile-setup-form .avatar-select {
+    display: flex;
+}
+#profile-setup-form label {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+#profile-setup-form figure {
+    margin: 5px;
+    padding: 5px;
+    border-radius: 10px;
+}
+#profile-setup-form button {
+    margin: 10px 0;
+    width: 10%;
+    padding: 5px;
+}
+#profile-setup-form h3 {
+    margin: 0;
+    text-align: center;
+}
+#profile-setup-form #username {
+    width: 30%;
+    margin: 7px;
+    padding: 5px;
+}
+#profile-setup-form #bio {
+    width: 90%;
+    height: 100px;
 }
