--- a/styles/style.css
+++ b/styles/style.css
@@ -340,14 +340,10 @@ justify-content: center;
 }
 
 /* Homepage styling */
-#homepage{
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-}
 
 #leaderboard-container{
     width: 100%;
-    margin: 0 auto;
+    margin-right: 20px;
     background-color: black;
 }
 
@@ -358,6 +354,7 @@ justify-content: center;
     flex-direction: column;
     font-size: .8rem;
     align-items: flex-start;
+    padding-right: 10px;
 }
 
 .leaders{
@@ -371,7 +368,7 @@ justify-content: center;
 
 #display-games{
     width: 100%;
-    margin: 60px;
+    margin: 20px;
 }
 
 #display-games img{
@@ -392,6 +389,80 @@ justify-content: center;
     color: white;
     background-color: rgb(43, 43, 43);
     opacity: .7;
+}
+
+.mini:hover{
+    opacity: .8;
+    background-color: rgb(73, 73, 73);
+    cursor: pointer;
+}
+
+#play-game-button:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+
+#homepage2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#kaboomio{
+    display: flex;
+    align-items: flex-start;
+    background-color: rgb(45, 0, 93);
+    padding: 20px;
+    width: 70%;
+    height: 200px;
+    margin: 20px 0px 60px 0px;
+    flex-wrap: wrap;
+}
+
+#kaboomio img{
+    height: 200px;
+    padding: 10px;
+}
+
+#kaboomio h1{
+    color: white;
+    padding: 0;
+    border-bottom: #d17300 5px solid;
+    border-radius: 5px;
+}
+
+#yoshi-egg{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    animation: bounce .4s linear;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+    margin: 0px 50px;
+    width: 100%;
+}
+
+#yoshi-egg img{
+    height: 50px;
+    display: flex;
+}
+
+#second-row{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+    margin-top: 20px;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translate3d(0, 20px, 0);
+    }
+    20% {
+        transform: translate3d(0px, 20px, 0);
+    }
 }
 
 /* profile setup page styling */
@@ -456,6 +527,10 @@ justify-content: center;
 
     .leaders{
         font-size: .5rem;
+    }
+
+    #kaboomio img{
+        display: none;
     }
 }
 
