--- a/styles/style.css
+++ b/styles/style.css
@@ -333,6 +333,7 @@ justify-content: center;
     margin: 10px;
     background-color: var(--color1);
     border: none;
+    width: 80vw;
 }
 
 #profilePage .profileEditForm {
@@ -342,14 +343,14 @@ justify-content: center;
 #profilePage .profileEditForm form {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    height: 100%;
 }
 
-#profilePage .profileEditForm input {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
+#profilePage .profileEditForm input[type=text] {
+    margin: 7px;
+    padding: 5px;
+    width: 180px;
     text-align: center;
 }
 
@@ -357,6 +358,7 @@ justify-content: center;
     display: flex;
     justify-content: center;
     text-align: center;
+    font-size: .8rem;
 }
 
 #profilePage .profileEditForm div {
@@ -364,15 +366,23 @@ justify-content: center;
 }
 
 #profilePage .profileEditForm button {
-    width: 80%;
+    margin: 30px 0;
+    width: 120px;
     height: 40px;
+}
+
+#profilePage .profileEditForm h3 {
+    margin: 15px 0;
+    text-align: center;
 }
 
 #profilePage .profileEditForm textarea {
     width: 80%;
     height: 100px;
+    margin: 7px;
+    padding: 5px;
     text-align: center;
-    margin-bottom: 20px;
+    resize: none;
 }
 
 #profilePage .labelName {
@@ -395,9 +405,13 @@ justify-content: center;
     border-radius: 10px;
 }
 
+#profilePage figcaption {
+    margin-top: 2px;
+}
+
 #profilePage .avatar-imgs {
-    height: 110px;
-    width: 110px;
+    height: 100px;
+    width: 100px;
     cursor: pointer;
 }
 
@@ -571,7 +585,7 @@ input[type=radio]:checked + figure {
 }
 #profile-setup-form button {
     margin: 30px 0;
-    width: 100px;
+    width: 120px;
     height: 40px;
 }
 #profile-setup-form h3 {
@@ -582,8 +596,9 @@ input[type=radio]:checked + figure {
     width: 180px;
     margin: 7px;
     padding: 5px;
+    text-align: center;
 }
-#profile-setup-form #bio {
+#profile-setup-form textarea {
     width: 80%;
     height: 100px;
     margin: 7px;
