--- a/styles/style.css
+++ b/styles/style.css
@@ -87,6 +87,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     width: 80px;
     height: 80px;
     padding-top: 5px;
@@ -790,3 +791,34 @@ input[type=radio]:checked + figure {
     visibility: hidden;
 }
 
+.tooltip {
+    visibility: hidden;
+    width: fit-content;
+    background-color: rgb(45, 0, 93);
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 7px;
+    position: absolute;
+    z-index: 1;
+    top: 85%;
+    /* left: 50%; */
+    /* margin-left: -60px; */
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip::after {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border: 5px solid;
+    border-color:  transparent transparent rgb(45, 0, 93) transparent;
+}
+
+.icons:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
+}
