--- a/styles/style.css
+++ b/styles/style.css
@@ -11,7 +11,7 @@ body {
     --color2: #10c3f4;
     --color3: #efda70;
     --color4: #c10114;
-    --color5: #55310a;
+    --color5: rgb(45, 0, 93);
     
     --header-height: 80px;
     --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
