--- a/styles/style.css
+++ b/styles/style.css
@@ -314,7 +314,6 @@ padding: 0px;
 
 table {
     margin: 10px 70px 70px;
-    box-shadow: 0px 5px 5px grey;
     border-radius: 5px;
     font-size: 12px;
     font-weight: normal;
@@ -323,19 +322,7 @@ table {
     width: 100%;
     max-width: 100%;
     white-space: nowrap;
-    background-color: white;
     max-width: 60vw;
-}
-
-td, th {
-    text-align: center;
-    padding: 8px;
-}
-
-th {
-    color: #ffffff;
-    background-color: var(--color5);
-    text-transform: uppercase;
 }
 
 tr:nth-child(even) {
@@ -368,9 +355,11 @@ tr:nth-child(even) {
 
 #profilePage .infoSection {
     margin: 10px;
-    background-color: var(--color1);
+    background-color: var(--color5);
     border: none;
     width: 80vw;
+    color: white;
+    border: 2px solid var(--color1);
 }
 
 #profilePage .profileEditForm {
@@ -436,6 +425,7 @@ tr:nth-child(even) {
     width: 100%;
     text-align: center;
     padding: 10px;
+    font-style: italic;
 }
 
 #profilePage #avatar {
