--- a/styles/style.css
+++ b/styles/style.css
@@ -880,7 +880,7 @@ input[type=radio]:checked + figure {
     width: 100%;
     height: 70%;
     margin: 20px 20%;
-    /* animation: credits 15s linear forwards; */
+    animation: credits 15s linear forwards;
     position: relative;
     overflow: hidden;
 }
