--- a/styles/style.css
+++ b/styles/style.css
@@ -221,7 +221,8 @@ footer {
 .leaderboard{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin: 50px;
+    margin: 40px;
+    width: 90%;
     flex-wrap: wrap;
 }
 
@@ -508,9 +509,10 @@ tr:nth-child(even) {
 
 #leaderboard-container{
     width: 100%;
-    height: 250px;
+    aspect-ratio: 16 / 9;
     margin-right: 20px;
     background-color: black;
+    position: relative;
 }
 
 .mini-leaderboard{
@@ -535,11 +537,11 @@ tr:nth-child(even) {
 #display-games{
     width: 100%;
     margin: 20px;
+    aspect-ratio: 16 / 9;
 }
 
 #display-games img{
     width: 100%;
-    height: 250px;
 }
 
 #label{
@@ -582,7 +584,7 @@ tr:nth-child(even) {
     padding: 20px;
     width: 90%;
     height: 200px;
-    margin: 20px 0px 60px 0px;
+    margin: 40px 0px;
     flex-wrap: wrap;
 }
 
@@ -607,6 +609,8 @@ tr:nth-child(even) {
     animation-iteration-count: infinite;
     margin: 0px 50px;
     width: 100%;
+    position: absolute;
+    bottom: 14px;
 }
 
 #yoshi-egg img{
@@ -621,6 +625,7 @@ tr:nth-child(even) {
     background-color: transparent;
     border: none;
     margin-top: 20px;
+    padding-bottom: 40px;
 }
 
 @keyframes bounce {
