--- a/styles/style.css
+++ b/styles/style.css
@@ -341,6 +341,7 @@ color: goldenrod;
     width: 80vw;
     color: white;
     border: 2px solid var(--color1);
+    border-radius: 10px;
 }
 
 #profilePage .profileEditForm {
